// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section multi base branch repo add detected dependencies to the Dependency Dashboard body 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

<details><summary>Branch main
</summary>

<ul><details><summary>dockerfile</summary>

<ul><details><summary>Dockerfile</summary>

 - \`ubuntu@20.04\`
</details></ul></details></ul><ul><details><summary>npm</summary>

<ul><details><summary>package.json</summary>

 - \`cookie-parser@^1.4.5\`
 - \`express@~4.17.1\`
 - \`express-handlebars@>=5.3.4\`
 - \`geoip-lite@1.4.*\`
 - \`nodemailer@6.7.0\`
 - \`redis@3.1.2-3.4.0\`
 - \`dotenv@10.0.0\`
 - \`nodemon@2.0.14\`
</details></ul></details></ul><ul><details><summary>poetry</summary>

<ul><details><summary>pyproject.toml</summary>

 - \`six@<=1.3.0\`
</details></ul></details></ul></details>

<details><summary>Branch dev
</summary>

<ul><details><summary>dockerfile</summary>

<ul><details><summary>Dockerfile</summary>

 - \`ubuntu@20.04\`
</details></ul></details></ul><ul><details><summary>npm</summary>

<ul><details><summary>package.json</summary>

 - \`cookie-parser@^1.4.5\`
 - \`express@~4.17.1\`
 - \`express-handlebars@>=5.3.4\`
 - \`geoip-lite@1.4.*\`
 - \`nodemailer@6.7.0\`
 - \`redis@3.1.2-3.4.0\`
 - \`dotenv@10.0.0\`
 - \`nodemon@2.0.14\`
</details></ul></details></ul><ul><details><summary>poetry</summary>

<ul><details><summary>pyproject.toml</summary>

 - \`six@<=1.3.0\`
</details></ul></details></ul></details>

"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section multi base branch repo show default message in issues body when packageFiles is empty 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

<details><summary>Branch main
</summary>

None detected


<details><summary>Branch dev
</summary>

<ul><details><summary>dockerfile</summary>

<ul><details><summary>Dockerfile</summary>

 - \`ubuntu@20.04\`
</details></ul></details></ul><ul><details><summary>npm</summary>

<ul><details><summary>package.json</summary>

 - \`cookie-parser@^1.4.5\`
 - \`express@~4.17.1\`
 - \`express-handlebars@>=5.3.4\`
 - \`geoip-lite@1.4.*\`
 - \`nodemailer@6.7.0\`
 - \`redis@3.1.2-3.4.0\`
 - \`dotenv@10.0.0\`
 - \`nodemon@2.0.14\`
</details></ul></details></ul><ul><details><summary>poetry</summary>

<ul><details><summary>pyproject.toml</summary>

 - \`six@<=1.3.0\`
</details></ul></details></ul></details>

"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section multi base branch repo show default message in issues body when when packageFiles is null 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

<details><summary>Branch main
</summary>

None detected


<details><summary>Branch dev
</summary>

<ul><details><summary>dockerfile</summary>

<ul><details><summary>Dockerfile</summary>

 - \`ubuntu@20.04\`
</details></ul></details></ul><ul><details><summary>npm</summary>

<ul><details><summary>package.json</summary>

 - \`cookie-parser@^1.4.5\`
 - \`express@~4.17.1\`
 - \`express-handlebars@>=5.3.4\`
 - \`geoip-lite@1.4.*\`
 - \`nodemailer@6.7.0\`
 - \`redis@3.1.2-3.4.0\`
 - \`dotenv@10.0.0\`
 - \`nodemon@2.0.14\`
</details></ul></details></ul><ul><details><summary>poetry</summary>

<ul><details><summary>pyproject.toml</summary>

 - \`six@<=1.3.0\`
</details></ul></details></ul></details>

"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section single base branch repo add detected dependencies to the Dependency Dashboard body 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

<details><summary>dockerfile</summary>

<ul><details><summary>Dockerfile</summary>

 - \`ubuntu@20.04\`
</details></ul></details><details><summary>npm</summary>

<ul><details><summary>package.json</summary>

 - \`cookie-parser@^1.4.5\`
 - \`express@~4.17.1\`
 - \`express-handlebars@>=5.3.4\`
 - \`geoip-lite@1.4.*\`
 - \`nodemailer@6.7.0\`
 - \`redis@3.1.2-3.4.0\`
 - \`dotenv@10.0.0\`
 - \`nodemon@2.0.14\`
</details></ul></details><details><summary>poetry</summary>

<ul><details><summary>pyproject.toml</summary>

 - \`six@<=1.3.0\`
</details></ul></details>"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section single base branch repo show default message in issues body when packageFiles is empty 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

None detected


"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() checks detected dependencies section single base branch repo show default message in issues body when when packageFiles is null 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

This repository currently has no open or pending branches.

## Dependencies detected

None detected


"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() contains logged problems 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

## Repository problems

These problems occurred while renovating this repository.

 - ERROR: everything is broken
 - WARN: just a bit
 - ERROR: i am a duplicated problem
 - ERROR: i am a non-duplicated problem
 - WARN: i am a non-duplicated problem

## Pending Status Checks

These updates await pending status checks. To force their creation now, click the checkbox below.

 - [ ] <!-- approvePr-branch=branchName1 -->pr1

"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() open or update Dependency Dashboard when all branches are closed and dependencyDashboardAutoclose is false 1`] = `
"This is a header

This repository currently has no open or pending branches.

---
And this is a footer
"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() open or update Dependency Dashboard when rules contain approvals 1`] = `
"This is a header for platform:github

This repository currently has no open or pending branches.

---
And this is a footer for repository:test
"
`;

exports[`workers/repository/dependency-dashboard ensureDependencyDashboard() rechecks branches 1`] = `
"This issue provides visibility into Renovate updates and their statuses. [Learn more](https://docs.renovatebot.com/key-concepts/dashboard/)

## Pending Approval

These branches will be created by Renovate only once you click their checkbox below.

 - [ ] <!-- approve-branch=branchName1 -->pr1
 - [ ] <!-- approve-branch=branchName2 -->pr2

## Awaiting Schedule

These updates are awaiting their schedule. Click on a checkbox to get an update now.

 - [x] <!-- unschedule-branch=branchName3 -->pr3

"
`;
